--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dashboard">Dashboard</string>
+    <string name="aktivasi">Aktivasi</string>
+    <string name="aktivasikah">Belum melakukan aktivasi?</string>
+    <string name="sudah_mengaktifkan_akun">Sudah mengaktifkan akun?</string>
 </resources>
